[CSS] - RSS bug: some HTML code in the RSS would have a specified width, that could make elements get out of container.
Solution: adding a max-width on all elements « * » in rss post.

--- a/admin/style/style-rss.css
+++ b/admin/style/style-rss.css
@@ -264,6 +264,10 @@
 	display: none;
 }
 
+#post-list > li .rss-item-content * {
+	max-width: 100%;
+}
+
 #post-list > li hr.clearboth {
 	clear: both;
 	margin: 0;
